--- a/src/components/Layout/Navbar/Navbar.module.css
+++ b/src/components/Layout/Navbar/Navbar.module.css
@@ -1,21 +1,23 @@
+header {
+    position: sticky;
+    top: 0px;
+    z-index: 10;
+}
 
 .navbar {
     border-bottom: 1px solid #e6e6e6;
-    position: fixed;
-    top: 0px;
     padding: 16px 0;
-
-    width: 100%;
-    height: fit-content;
+    margin: 0 12% 2%;
     background-color: #fff;
-    z-index: 10;
+    height: 10%;
+
 }
 
 .nav-container {
     display: flex;
     align-items: center;
     margin: 0 auto;
-    width: 80%;
+    width: 100%;
 }
 
 .logo-container {
@@ -85,8 +87,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 30%;
-    max-width: 200px;
+    width: 25%;
+    position: relative;
 }
 
 .icon-container div {
@@ -127,6 +129,7 @@
 
 .navbar-link img {
     margin-right: 8px;
+
 }
 
 
@@ -185,10 +188,7 @@
     }
 
     .navbar {
-
-        width: 100%;
-        padding-left: 10px;
-        height: fit-content;
+        padding: 0 2%;
     }
 
     .brand-name h1 {
