--- a/src/components/UI/AddSubtractButton.module.css
+++ b/src/components/UI/AddSubtractButton.module.css
@@ -40,3 +40,29 @@
     width: 1.5rem;
     height: 1.5rem;
 }
+
+.meal-button {
+    display: inline-flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: sans-serif;
+    font-size: 0.9rem;
+    color: #146eb3;
+    cursor: pointer;
+    width: 4.5rem;
+    height: 1.5rem;
+    border: 1px solid #146eb3;
+    border-radius: 4px;
+    padding-top: 4px;
+}
+
+.meal-button span {
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1px;
+}
+
+.meal-button span img {
+    margin: 0 0 2px 8px;
+}
