--- a/src/components/Cart/CartModal/CartModal.module.css
+++ b/src/components/Cart/CartModal/CartModal.module.css
@@ -1,16 +1,12 @@
 .cartmodal {
     background-color: rgb(250, 49, 49);
     color: #FFF;
-    position: absolute;
-    left: 35px;
-    top: 5px;
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     border-radius: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
     font-size: 1rem;
-    z-index: 12;
 }
