--- a/src/components/UI/VegOnly/VegOnly.module.css
+++ b/src/components/UI/VegOnly/VegOnly.module.css
@@ -1,26 +1,28 @@
 .wrapper {
     display: inline-flex;
     position: relative;
-    height: 50px;
+    width: 2rem;
+    height: 2rem;
+    /* background-color: rgb(184, 109, 17); */
+
 }
 
 .checkbox {
-    width: 50px;
-    height: inherit;
+    width: 2rem;
+    height: 2rem;
     position: absolute;
     opacity: 0;
-    margin: 0;
+    margin: auto;
     z-index: 1;
 }
 
 .toggleon {
-    width: 50px;
-    height: inherit;
-
+    width: 2rem;
+    /* height: 2rem; */
 }
 
 .toggleoff {
-    color: #d9d9d9;
-    width: 50px;
-    height: inherit;
+    width: 2rem;
+    object-fit: inherit;
+    /* margin-top: 6px; */
 }
