Restaurent Modal Done

--- a/src/components/Layout/MiddleColumn.module.css
+++ b/src/components/Layout/MiddleColumn.module.css
@@ -14,3 +14,17 @@
 .middle::-webkit-scrollbar {
     display: none;
 }
+
+.vegonly-wrapper {
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.veg-heading {
+    height: 2rem;
+    margin-left: 14px;
+    display: flex;
+    align-items: center;
+    font-family: sans-serif;
+}
