--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -1,17 +1,25 @@
 .hotel {
-    /* position: fixed; */
-    top: 20%;
-    padding: 0 2rem;
+    position: fixed;
+    padding: 2px 1rem;
     border-bottom-right-radius: 15px;
-    width: 100%;
+    width: 70%;
+    max-width: 550px;
+    height: fit-content;
+    box-sizing: border-box;
+    margin: 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content:space-between;
     align-items: center;
-    height: 30px;
+
     background-color: rgb(252, 252, 252);
     z-index: 10;
 
+}
+.hotel h3{
+    font-size: 1rem;
+
+    margin: 0;
 }
 
 .cart-count {
@@ -21,7 +29,6 @@
     color: #fff;
     margin-left: 6px;
     font-size: 16px;
-    line-height: 18px;
     font-weight: 500;
     min-width: 29px;
     text-align: center;
