--- a/src/components/Layout/MiddleColumn.module.css
+++ b/src/components/Layout/MiddleColumn.module.css
@@ -3,7 +3,7 @@
     max-height: 100vh;
     padding: 0;
     padding-top: 3rem;
-    background-color: darkgray;
+    /* background-color: darkgray; */
     border-left: 2px solid #e6e6e6;
     border-right: 2px solid #e6e6e6;
     overflow-y: scroll;
