--- a/src/components/Layout/RightColumn.module.css
+++ b/src/components/Layout/RightColumn.module.css
@@ -1,7 +1,7 @@
 .right {
     min-height: 31.25rem;
     max-height: 100vh;
-    background-color: rgb(119, 214, 119);
+    /* background-color: rgb(119, 214, 119); */
     overflow-y: hidden;
     padding-top: 3rem;
 }
