--- a/src/components/Layout/Navbar/Navbar.module.css
+++ b/src/components/Layout/Navbar/Navbar.module.css
@@ -47,12 +47,13 @@ header {
     object-fit: contain;
 }
 
-.brand-name h1 {
+.brandName {
     font-size: 24px;
     line-break: normal;
     font-weight: 500;
-
-
+    margin-left: 1rem;
+    text-decoration: none;
+    color: rgb(20, 20, 20);
 }
 
 .search {
@@ -130,6 +131,12 @@ header {
 .navbar-link img {
     margin-right: 8px;
 
+}
+
+.active {
+    background-color: rgba(20, 110, 180, 0.1);
+    color: #146eb4;
+    border-radius: 20px;
 }
 
 .cart-modal {
